MacViews: Fix flashing of opaque non-modal windows on display.

Currently, opaque non-modal windows like the Task Manager appear with a "flash",
when displayed initially. This is because if the frame from the compositor
hasn't arrived yet, the background color of the window shows through. When the
frame arrives, the actual contents are displayed, causing a "flash".

To get around this, for opaque non-modal windows, set the alpha value of the
window to 0, till the correct frame from the compositor is received. Also,
ignore mouse clicks till then. This also fixes the "black strip" that is
displayed in the non webcontents area of the MacViewsBrowser, when it is
displayed initially.

BUG=623950, 645343
TEST=With chrome://flags/#mac-views-native-dialogs enabled, open the Task
Manager. Observe it is not displayed with a Flash. (Record a screencast and
observe frame by frame).
TEST=Build with mac_views_browser=true. Open the browser and observe no black
strip is displayed in the non web-contents area, when it is displayed initially.

Review-Url: https://codereview.chromium.org/2312133002
Cr-Commit-Position: refs/heads/master@{#417863}

Former-commit-id: f6ac68b04228683aa3176ad4020e109fbde5abf6